<resources>
    <string name="app_name">JsonRetrofitRx</string>

    <string name="refresh">Refresh</string>

    <string name="title">Title</string>
    <string name="picture">Picture</string>
    <string name="desc">Desc</string>
    <string name="length">Length</string>
    <string name="dt">Dt</string>
    <string name="video">Video</string>

    <string name="server_call">Tap on floating action button to make server call</string>
    <string name="author">Author</string>
    <string name="anons">Anons</string>
    <string name="typePdf">typePdf</string>
    <string name="urlPdf">urlPdf</string>
    <string name="typeEpub">typeEpub</string>
    <string name="urlEpub">urlEpub</string>
</resources>
